--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="/CryptoPrediction/static/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://code.highcharts.com/themes/dark-unica.js"></script>
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/data.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
     <script src="/CryptoPrediction/static/js/script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -19,7 +20,6 @@
         .chart-container {
             position: relative;
         }
-
         .chart-loading {
             position: absolute;
             top: 50%;
@@ -31,7 +31,6 @@
             text-align: center;
             z-index: 1000;
         }
-
         .loading-text {
             margin-top: 10px;
             color: white;
